kubernetes/argocd-apps/hedgedoc/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hedgedoc-route
  namespace: hedgedoc
spec:
  hostnames:
    - "hedgedoc.home"
  parentRefs:
    - group: gateway.networking.k8s.io
      name: public-gateway
      namespace: kube-system
      kind: Gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: hedgedoc
          port: 3000
          weight: 1
